--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "mqtt": "^5.7.1",
     "nodemon": "^3.1.3",
-    "puppeteer": "^22.11.2"
+    "puppeteer": "^22.11.2",
+    "randomstring": "^1.3.0"
   }
 }
